@@ -1,6 +1,7 @@
 Revision history for Net-XMPP2
 
 0.02
+         - added iq_xml event
          - added development client example in samples/devcl/
          - added some debugging events: debug_recv, debug_send, send_stanza_data,
            and recv_stanza_xml.
